fix: text wrap

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Inter", sans-serif;
+  width: 100vw !important;
 }
 
 .mono {
@@ -156,12 +157,6 @@ body {
 .hover-lift:hover {
   transform: translateY(-4px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 768px) {
-  body {
-    overflow-x: hidden;
-  }
 }
 
 #titleDrawing {
